--- a/soda.html
+++ b/soda.html
@@ -775,7 +775,7 @@
                 <div class="tengah"><a href="#"></a><br>
                     <div><a href="" target="_blank" rel="noopener noreferrer nofollow">
                     <amp-img height="250" width="250" class="animated tada infinite slower" alt="TORTOGEL" src="/assets/tortogel.jpg"></amp-img></a></div>
-                    <div class="kiw-kiw"><a href="https://tor4d.wiki/tortogel" target="_blank" rel="noopener noreferrer nofollow"><button
+                    <div class="kiw-kiw"><a href="https://tor4d.wiki/daftar" target="_blank" rel="noopener noreferrer nofollow"><button
                                 class="btn2 animated fadeInLeft slow"><strong>LOGIN</strong>
                                 <div id="container-animation">
                                     <div id="stars"></div>
@@ -784,7 +784,7 @@
                                     <div class="circle"></div>
                                     <div class="circle"></div>
                                 </div>
-                            </button></a><br><a href="https://tor4d.wiki/tortogelslot" target="_blank" rel="noopener noreferrer nofollow"
+                            </button></a><br><a href="https://tor4d.wiki/login" target="_blank" rel="noopener noreferrer nofollow"
                             class="btn1 contole link1 animated fadeInBottom slow">DAFTAR</a></div>
                 </div>
                 <h1 class="text-center animated heartBeat slow infinite">🔥 TORTOGEL 🔥</h1>
