--- a/soda.html
+++ b/soda.html
@@ -31,7 +31,7 @@
         <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap">
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
         <link rel="shortcut icon" href="/assets/tortogel.png" type="image/x-icon">
-        <link rel="canonical" href="https://jan99.pages.dev/soda">
+        <link rel="canonical" href="https://tortogelvip.site/">
         <style amp-boilerplate>
             body {
                 -webkit-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
